Conectar servicio componente

--- a/src/app/page/products/products.component.html
+++ b/src/app/page/products/products.component.html
@@ -1,2 +1,13 @@
-<p>products works!</p>
-<app-product></app-product>
+<section class="products">
+    <!-- Componente hijo encargado de pintar los hijos
+    Se le va a mandar con un for un producto a producto del array products -->
+    <app-product></app-product>
+  </section>
+
+
+<!-- <pre>
+    {{products | json}}
+</pre> -->
+
+
+
